--- a/style.css
+++ b/style.css
@@ -46,6 +46,9 @@
             footer {
                 min-height: 20px;
                 text-align: center;
+                padding: 10px;
+                background-color: black );
+                color: white;
                 /*: flex;
                 align-items: flex-end;*/
             }
