--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
                 min-height: 20px;
                 text-align: center;
                 padding: 10px;
-                background-color: black );
+                background-color: black;
                 color: white;
                 /*: flex;
                 align-items: flex-end;*/
