--- a/style.css
+++ b/style.css
@@ -143,12 +143,12 @@ body
 }
 
 li {
-    color: blue
+    color: rgb(0, 0, 0)
 }
 
 .favorite {
-    color: burlywood;
-    background-color: greenyellow;
+    color: rgb(0, 0, 0);
+    background-color: rgba(128, 105, 0 , 0.5);
     font-style: italic;
 }
 
