added showPage function

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
                 display: flex;
                 flex-direction: column;
                 font-family: 'Roboto', sans-serif;
+                
             }
             header, body > section {
                 flex: 1;
@@ -45,10 +46,12 @@
                 flex: 4;
                 display: flex;
                 flex-direction: row;
+                
             }
             #side-menu {
                 flex: 1;
-                padding: 5px;
+                padding: 20px 0px 0px 0px;
+                
             }
             #main {
                 flex: 4;
@@ -63,6 +66,7 @@
                 font-weight: 900;
                 display: grid;
                 grid-template-areas: 'linkedin or fun';
+
                 
             }
 
@@ -132,7 +136,8 @@ body
 
 #top-menu-bar a:hover {
     color: #334455;
-    background-color: #fff;
+    background-color: rgba(128, 105, 0, 1);
+    padding: 0 20px 0 20px;
 }
 
 .page {
