--- a/style.css
+++ b/style.css
@@ -13,14 +13,7 @@
                 padding: 4px;
                 border: 2px solid green;
             }   */
-            @font-face {
-                font-family: 'Roboto';
-                font-style: normal;
-                font-weight: 400 900;
-                font-display: swap;
-                src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
-                unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-              }
+
 
             html h1, h2 {
                 font-weight: 900;
@@ -139,7 +132,8 @@ body
 
 #top-menu-bar a:visited {color: #fff}
 
-#top-menu-bar a:hover {
+#top-menu-bar a:hover,
+#top-menu-bar a.active {
     color: #334455;
     background-color: rgba(128, 105, 0, 1);
     padding: 0 20px 0 20px;
