--- a/style.css
+++ b/style.css
@@ -147,8 +147,13 @@ body
     border-radius: 2px;
 }
 
-li {
-    color: rgb(0, 0, 0)
+#skills li {
+    color: rgb(0, 0, 0);
+    font-weight: 300;
+}
+
+#skills li span {
+    color: gray
 }
 
 .favorite {
